--- a/www/node22/Makefile
+++ b/www/node22/Makefile
@@ -29,6 +29,8 @@ LIB_DEPENDS=	libbrotlidec.so:archivers/brotli \
 
 USES=		compiler:c++11-lib gmake localbase pkgconfig python:build shebangfix tar:xz
 
+MPROTECT_DISABLE=       bin/node
+
 CONFIGURE_ARGS=	--prefix=${PREFIX:S|^${DESTDIR}||} \
 		--shared-brotli \
 		--shared-cares \
