--- a/editors/libreoffice/Makefile
+++ b/editors/libreoffice/Makefile
@@ -137,6 +137,7 @@ USE_GNOME=	cairo glib20 libxml2 libxslt
 USE_PERL5=	build
 USE_XORG=	ice sm x11 xaw xcb xext xinerama xrandr xrender
 
+USE_HARDENING=		pie:off
 PAGEEXEC_DISABLE=	lib/libreoffice/program/soffice.bin
 MPROTECT_DISABLE=	lib/libreoffice/program/soffice.bin
 
